--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="css/styles.css" />
     </head>
-    <body>
+    <body onload="links()">
         <h1>WDD 330 Portfolio</h1>
-        <hr/>
-        <ol>
-            <li><a href="week1.html">Week1</a></li>
-            <li><a href="week2.html">Week2</a></li>
+        <ol id='olist'>
         </ol>
     </body>
+    <script src='js/main.js'></script>
 
 </html>
