bring css into scope

--- a/week1/index.html
+++ b/week1/index.html
@@ -4,7 +4,7 @@
         <title>Week1</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <script src='js/main.js'></script>
+        <script src='../js/main.js'></script>
         <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
