--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src='js/main.js'></script>
         <link rel="stylesheet" href="css/styles.css" />
     </head>
-    <body>
+    <body onload="homeload()">
         <h1>WDD 330 Portfolio</h1>
         <ol id='olist'>
         </ol>
