--- a/week1/index.html
+++ b/week1/index.html
@@ -11,6 +11,8 @@
         <h1>WDD 330 Portfolio</h1>
         <ol id='olist1'>
         </ol>
+        <h2>Questions</h2>
+        <p>No questions</p>
     </body>
 
 </html>
