--- a/week1/index.html
+++ b/week1/index.html
@@ -7,7 +7,7 @@
         <script src='../js/main.js'></script>
         <link rel="stylesheet" href="../css/styles.css" />
     </head>
-    <body onload="week1()">
+    <body onload="weeks()">
         <h1>WDD 330 Portfolio</h1>
         <ol id='olist1'>
         </ol>
