olist error fix

--- a/week1/index.html
+++ b/week1/index.html
@@ -9,7 +9,7 @@
     </head>
     <body onload="weeks()">
         <h1>WDD 330 Portfolio</h1>
-        <ol id='olist1'>
+        <ol id='olist'>
         </ol>
         <h2>Questions</h2>
         <p>No questions</p>
