--- a/week2/index.html
+++ b/week2/index.html
@@ -9,7 +9,7 @@
     </head>
     <body onload="weeks()">
         <h1>WDD 330 Portfolio</h1>
-        <ol id='olist2'>
+        <ol id='olist'>
         </ol>
     </body>
 
