--- a/week4/notes/index.html
+++ b/week4/notes/index.html
@@ -11,11 +11,8 @@
         <h1>WDD 330 Portfolio</h1>
         
         <h3>Forms</h3>
-        <br/>
-
-        <p> We can access the form in JS using the following line: const varNameForForm = document.forms['FormNameAttribute'][index];</p>
-        <br/>
-        <p>Without an index, an array of all forms in the document is returned.<br/> Forms index is based on order of appearance in the html document</p>
+        <p> We can access the form in JS using the following line: const varNameForForm = document.forms['FormNameAttribute'][index];<br/>
+        Without an index, an array of all forms in the document is returned.<br/> Forms index is based on order of appearance in the html document</p>
         <p> We can add an event listener the the form using the forllowing line: varNameForForm.addEventListener('submit', functionName, false); </p>
         <p> <strong>function</strong><br/>
         
