--- a/week10/notes/index.html
+++ b/week10/notes/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script src='../js/main.js'></script>
-        <link rel="stylesheet" href="../css/styles.css" />
+        <link rel="stylesheet" href="/port/css/styles.css" />
     </head>
     <body>
         <h1>Form Validation & the Using Fetch</h1>
@@ -68,15 +68,15 @@
         </p>
         <h4>Example snippet</h4>
         <p class="examples">
-            const varName = document.getElementById("elementId");
+            const varName = document.getElementById("elementId");<br/><br/>
 
-            varName.addEventListener("input", function (event) {
-            if (varName.validity.typeMismatch) {
-                varName.setCustomValidity("I am expecting an e-mail address!");
-            } else {
-                varName.setCustomValidity("");
-            }
-            });
+            varName.addEventListener("input", function (event) {<br/>
+            if (varName.validity.typeMismatch) {<br/>
+                varName.setCustomValidity("I am expecting an e-mail address!");<br/>
+            } else {<br/>
+                varName.setCustomValidity("");<br/>
+            }<br/>
+            });<br/>
         </p>
 
         <h2>Using Fetch</h2>
@@ -87,27 +87,27 @@
             The fetch() method can optionally accept a second parameter, an init object that allows you to control a number of different settings:
         </p>
         <p class="examples">
-            // Example POST method implementation:
-            async function postData(url = '', data = {}) {
-            // Default options are marked with *
-            const response = await fetch(url, {
-                method: 'POST', // *GET, POST, PUT, DELETE, etc.
-                mode: 'cors', // no-cors, *cors, same-origin
-                cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
-                credentials: 'same-origin', // include, *same-origin, omit
-                headers: {
-                'Content-Type': 'application/json'
-                // 'Content-Type': 'application/x-www-form-urlencoded',
-                },
-                redirect: 'follow', // manual, *follow, error
-                referrerPolicy: 'no-referrer', // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url
-                body: JSON.stringify(data) // body data type must match "Content-Type" header
-            });
-            return response.json(); // parses JSON response into native JavaScript objects
-            }
+            // Example POST method implementation:<br/>
+            async function postData(url = '', data = {}) {<br/>
+            // Default options are marked with *<br/>
+            const response = await fetch(url, {<br/>
+                method: 'POST', // *GET, POST, PUT, DELETE, etc.<br/>
+                mode: 'cors', // no-cors, *cors, same-origin<br/>
+                cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached<br/>
+                credentials: 'same-origin', // include, *same-origin, omit<br/>
+                headers: {<br/>
+                'Content-Type': 'application/json'<br/>
+                // 'Content-Type': 'application/x-www-form-urlencoded',<br/>
+                },<br/>
+                redirect: 'follow', // manual, *follow, error<br/>
+                referrerPolicy: 'no-referrer', // no-referrer, *no-referrer-when-downgrade, origin, origin-when-cross-origin, same-origin, strict-origin, strict-origin-when-cross-origin, unsafe-url<br/>
+                body: JSON.stringify(data) // body data type must match "Content-Type" header<br/>
+            });<br/>
+            return response.json(); // parses JSON response into native JavaScript objects<br/>
+            }<br/><br/>
 
-            postData('https://example.com/answer', { answer: 42 })
-            .then(data => {
-                console.log(data); // JSON data parsed by `data.json()` call
-            });
+            postData('https://example.com/answer', { answer: 42 })<br/>
+            .then(data => {<br/>
+                console.log(data); // JSON data parsed by `data.json()` call<br/>
+            });<br/>
         </p>
