--- a/week10/notes/index.html
+++ b/week10/notes/index.html
@@ -121,7 +121,7 @@
 
             postData('https://example.com/answer', { answer: 42 })<br/>
             .then(data => {<br/>
-                console.log(data); // JSON data parsed by `data.json()` call<br/>
+                &nbsp;console.log(data); // JSON data parsed by `data.json()` call<br/>
             });<br/>
         </p>
 
