--- a/week10/notes/index.html
+++ b/week10/notes/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/port/css/styles.css" />
     </head>
     <body>
-        <h1>Form Validation & the Using Fetch</h1>
+        <h1>Week 10 Notes</h1>
 
         <h2>Form Validation</h2>
         
